Update .config/Code - OSS/User/settings.json

--- a/dot_config/private_Code - OSS/User/settings.json
+++ b/dot_config/private_Code - OSS/User/settings.json
@@ -29,5 +29,6 @@
 			"--select=E",
 			"--select=I001",
 		],
-		"explorer.confirmDelete": false
+		"explorer.confirmDelete": false,
+		"python.terminal.activateEnvironment": false
 }
