Update .config/Code - OSS/User/settings.json

--- a/dot_config/private_Code - OSS/User/settings.json
+++ b/dot_config/private_Code - OSS/User/settings.json
@@ -30,5 +30,6 @@
 			"--select=I001",
 		],
 		"explorer.confirmDelete": false,
-		"python.terminal.activateEnvironment": false
+		"python.terminal.activateEnvironment": false,
+		"editor.unicodeHighlight.ambiguousCharacters": false
 }
