--- a/dot_config/private_Code - OSS/User/settings.json
+++ b/dot_config/private_Code - OSS/User/settings.json
@@ -5,7 +5,6 @@
     "explorer.confirmDragAndDrop": false,
     "ruff.importStrategy": "useBundled",
     "editor.fontFamily": "Fira Code",
-		"editor.defaultFormatter": "charliermarsh.ruff",
 		"editor.fontLigatures": true,
 		"files.watcherExclude": {
 			"**/.venv": true
@@ -24,11 +23,12 @@
 			"reportUnusedFunction": "none",
 		},
 		"ruff.lint.args": [
-			"--select=ARG",
-			"--select=F",
-			"--select=E",
-			"--select=I001",
+			"--select=ARG,F,E,I001",
+      "--line-length=120",
 		],
+    "ruff.format.args": [
+      "--line-length=120",
+    ],
 		"explorer.confirmDelete": false,
 		"python.terminal.activateEnvironment": false,
 		"editor.unicodeHighlight.ambiguousCharacters": false
