--- a/private_Library/private_Application Support/private_Code/User/settings.json
+++ b/private_Library/private_Application Support/private_Code/User/settings.json
@@ -24,10 +24,11 @@
 			"reportUnusedFunction": "none",
 		},
 		"ruff.lint.args": [
-			"--select=ARG",
-			"--select=F",
-			"--select=E",
-			"--select=I001",
+			"--select=ARG,F,E,I001",
+      "--line-length=120",
+		],
+		"ruff.format.args": [
+      "--line-length=120",
 		],
 		"explorer.confirmDelete": false
 }
