Disable time in prompt

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -143,7 +143,7 @@ symbol = " "
 symbol = "🅢 "
 
 [time]
-disabled = false
+disabled = true
 format = '[\[ $time \]]($style) '
 time_format = '%T'
 utc_time_offset = '+3'
