--- a/dot_config/private_atuin/private_config.toml
+++ b/dot_config/private_atuin/private_config.toml
@@ -107,6 +107,7 @@ history_filter = [
   "^mamba",
   "^micromamba",
   "^export GITLAB",
+  "TOKEN",
 ]
 
 ## prevent commands run with cwd matching any of these regexes from being written
