--- a/dot_config/private_atuin/private_config.toml
+++ b/dot_config/private_atuin/private_config.toml
@@ -109,6 +109,8 @@ history_filter = [
   "^export GITLAB",
   "TOKEN",
   "docker login",
+  "VAULT",
+  "YC",
 ]
 
 ## prevent commands run with cwd matching any of these regexes from being written
