--- a/dot_config/ruff/pyproject.toml
+++ b/dot_config/ruff/pyproject.toml
@@ -33,7 +33,7 @@ line-length = 100
 indent-width = 4
 
 [tool.ruff.lint]
-select = ["ARG", "F", "E", "I", "W", "B", "C4", "UP", "RUF", "ASYNC"]
+select = ["ARG", "F", "E", "I", "W", "B", "C4", "UP", "RUF", "ASYNC", "FURB"]
 fixable = ["I"]
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
