--- a/dot_config/private_atuin/private_config.toml
+++ b/dot_config/private_atuin/private_config.toml
@@ -111,6 +111,7 @@ history_filter = [
   "docker login",
   "VAULT",
   "YC",
+  "kubectl delete nodes"
 ]
 
 ## prevent commands run with cwd matching any of these regexes from being written
