--- a/dot_config/rumdl/rumdl.toml
+++ b/dot_config/rumdl/rumdl.toml
@@ -10,6 +10,10 @@
 [global]
 line_length = 120  # Prettier default print width (with --prose-wrap always)
 
+exclude = [
+    "SUMMARY.md",
+]
+
 # Headings: ATX-style (# Heading) - Prettier converts setext to ATX
 [MD003]
 style = "atx"
