--- a/dot_config/rumdl/rumdl.toml
+++ b/dot_config/rumdl/rumdl.toml
@@ -47,3 +47,6 @@ style = "asterisk"
 # - MD012: No multiple consecutive blank lines
 # - MD023: Headings must start at beginning of line
 # - MD047: Files end with single newline
+
+[MD033]
+allowed-elements = [details, summary]
